--- a/style.css
+++ b/style.css
@@ -6,7 +6,22 @@
 
 } 
 
-div > section {
-    display: flex;
+div {
+    background: linear-gradient(to right, #54aeff, #0969da);
+    border: 1px solid red;
+
+    font-family: Arial, Helvetica, sans-serif;
+    /*font-size: 42px;*/
+
     justify-content: center;
+    border-radius: 15px;
+    display: flex;
+    margin: 55px;
+    padding: 135px;
+}
+
+.container p {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
 }
